--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    <!--[if lt IE 10]>
+    <link rel="stylesheet" type="text/css" href="/style/cssIE.css"/>
+    <![endif]-->
 </head>
 <body>
-    test test test
+    <header>
+        <div class="container">
+            <a href="index.html" class="logo">logo</a>
+        </div>
+    </header>
+    <div class="wrap">
+
+    </div>
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
+
+
+
+    <div class="to-top"></div>
 </body>
 </html>
