--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="index.html" class="logo">logo</a>
+            <a href="/" class="logo">logo</a>
             <ul class="nav">
                 <li><a href="index2.html">index2 page</a></li>
                 <li><a href=""></a></li>
