--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 <body>
 <header>
     <div class="container">
-        <a href="index.html" class="logo">logo</a>
+        <a href="/" class="logo">logo</a>
     </div>
 </header>
 <div class="wrap">
