--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,12 @@
 <body>
 <header>
     <div class="container">
-        <a href="/" class="logo">logo</a>
+        <ul class="nav">
+            <li><a href="index.html">pixi js</a></li>
+            <li class="active"><a href="index2.html">index2 page</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
     </div>
 </header>
 <div class="wrap">
@@ -27,9 +32,5 @@
 
     </div>
 </footer>
-
-
-
-<div class="to-top"></div>
 </body>
 </html>
