--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <!--[if lt IE 10]>
     <link rel="stylesheet" type="text/css" href="/style/cssIE.css"/>
     <![endif]-->
+    <script src="scripts/ajquery-1.12.0.min.js"></script>
+    <script src="scripts/pixi.js"></script>
+    <script src="scripts/index.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo">logo</a>
             <ul class="nav">
+                <li class="active"><a href="index.html">pixi js</a></li>
                 <li><a href="index2.html">index2 page</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
@@ -25,16 +28,20 @@
         </div>
     </header>
     <div class="wrap">
-
+        <div class="content">
+            <div class="container">
+                <div class="h3">Pixi init example</div>
+                <a href="https://pixijs.io/examples/" class="link">tutorials</a>
+                <div class="canvas-wrap" id="canvas-wrap-1"></div>
+                <div class="canvas-wrap" id="canvas-wrap-2"></div>
+                <div class="canvas-wrap" id="canvas-wrap-3"></div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="container">
 
         </div>
     </footer>
-
-
-
-    <div class="to-top"></div>
 </body>
 </html>
